Fixes #47 Binded IsChecked to VM property
IsChecked is now binded to the MainViewModel's SelectedPage property.

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -17,4 +17,5 @@
     <convert:PackIconKindToStringConverter x:Key="PackIconKindToStringConverter"/>
     <convert:BrushStringConverter x:Key="BrushStringConverter"/>
     <convert:PlayerObjectToStringConverter x:Key="PlayerObjectToStringConverter"/>
+    <convert:SelectedPageToToggleCheckCovnerter x:Key="SelectedPageToToggleCheckCovnerter"/>
 </ResourceDictionary>
