--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -55,9 +55,9 @@
             <Rectangle Fill="{DynamicResource SolidColorBrushMain}" Opacity="0.2" Grid.RowSpan="2"/>
 
             <StackPanel Orientation="Vertical" Margin="0 50 0 0">
-                <ToggleButton Style="{DynamicResource SidebarButtonAllSongs}" IsChecked="True" Command="{Binding OpenPageCommand}" CommandParameter="Songs"/>
+                <ToggleButton Style="{DynamicResource SidebarButtonAllSongs}" IsChecked="{Binding SelectedPage, Converter={StaticResource SelectedPageToToggleCheckCovnerter}, ConverterParameter=SongsViewModel, Mode=OneWay}" Command="{Binding OpenPageCommand}" CommandParameter="Songs"/>
+                <ToggleButton Style="{DynamicResource SidebarButtonPlaylists}" IsChecked="{Binding SelectedPage, Converter={StaticResource SelectedPageToToggleCheckCovnerter}, ConverterParameter=PlaylistsViewModel, Mode=OneWay}" Command="{Binding OpenPageCommand}" CommandParameter="Playlists"/>
                 <ToggleButton Style="{DynamicResource SidebarButtonCollection}" IsEnabled="False"/>
-                <ToggleButton Style="{DynamicResource SidebarButtonPlaylists}" Command="{Binding OpenPageCommand}" CommandParameter="Playlists"/>
             </StackPanel>
 
             <ContentPresenter x:Name="contentPresenter" Grid.Row="1" Content="{Binding Visualization.Content}"/>
