Fixes #34. Bind title width to list width
ColumnDefinition inside songs' ListView is now using Binding that sets its width to ListView.ActualWidth - 95.

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -18,4 +18,5 @@
     <convert:BrushStringConverter x:Key="BrushStringConverter"/>
     <convert:PlayerObjectToStringConverter x:Key="PlayerObjectToStringConverter"/>
     <convert:SelectedPageToToggleCheckCovnerter x:Key="SelectedPageToToggleCheckCovnerter"/>
+    <convert:SongTitleColumnConverter x:Key="SongTitleColumnConverter"/>
 </ResourceDictionary>
