[Experimental] Async background loading
For now this change is inactive and saved purely for the future ideas.
Couple of issues
- Inconsisten (sometimes it doesn't load bg that are available)
- Huge load on startup
In first 20-30 seconds it ramps up to 1.1GB RAM usage and 50% CPU usage. It didn't chug my system, but nonetheless non ideal.

--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -19,4 +19,5 @@
     <convert:PlayerObjectToStringConverter x:Key="PlayerObjectToStringConverter"/>
     <convert:SelectedPageToToggleCheckCovnerter x:Key="SelectedPageToToggleCheckCovnerter"/>
     <convert:SongTitleColumnConverter x:Key="SongTitleColumnConverter"/>
+    <convert:BeatmapToImageConverter x:Key="BeatmapToImageConverter"/>
 </ResourceDictionary>
