--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -30,13 +30,29 @@
 
             <Border Margin="13 0 0 0" Padding="5 0 5 0" HorizontalAlignment="Left" VerticalAlignment="Top" 
                     Background="{DynamicResource SolidColorBrushMain}" CornerRadius="0 0 10 10">
-                <Button Style="{DynamicResource SidebarButtonOsu}" Command="{Binding OpenAboutCommand}"/>
+                <Button Style="{DynamicResource SidebarButtonOsu}" Command="{Binding OpenAboutCommand}">
+                    <Button.ToolTip>
+                        <TextBlock Text="About"/>
+                    </Button.ToolTip>
+                </Button>
             </Border>
-            <Button Style="{DynamicResource SettingsButton}" Command="{Binding OpenSettingsCommand}" HorizontalAlignment="Right"/>
+            <Button Style="{DynamicResource SettingsButton}" Command="{Binding OpenSettingsCommand}" HorizontalAlignment="Right">
+                <Button.ToolTip>
+                    <TextBlock Text="Settings"/> 
+                </Button.ToolTip>
+            </Button>
             <StackPanel Grid.Column="1"  HorizontalAlignment="Right" Orientation="Horizontal">
                 <Button Style="{StaticResource TitleBarUpdates}" Visibility="{Binding DataContext.Updater.State, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Converter={StaticResource UpdateStateToVisibilityConverter}, FallbackValue=Collapsed}"
-                        Command="{Binding DataContext.UpdateAppCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"/>
-                <Button Style="{StaticResource TitleBarGitHub}" Command="{Binding OpenGitHubCommand}"/>
+                        Command="{Binding DataContext.UpdateAppCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
+                    <Button.ToolTip>
+                        <TextBlock Text="Update osu.Music"/>
+                    </Button.ToolTip>
+                </Button>
+                <Button Style="{StaticResource TitleBarGitHub}" Command="{Binding OpenGitHubCommand}">
+                    <Button.ToolTip>
+                        <TextBlock Text="Go to GitHub"/>
+                    </Button.ToolTip>
+                </Button>
                 <Button Style="{StaticResource TitleBarMinimize}" Command="{Binding MinimizeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"/>
                 <Button x:Name="MaximizeButton" Style="{StaticResource TitleBarMaximize}" Command="{Binding MaximizeOrRestoreCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" CommandParameter="{Binding ElementName=MaximizeButton}"/>
                 <Button x:Name="RestoreButton" Style="{StaticResource TitleBarRestore}" Command="{Binding MaximizeOrRestoreCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" CommandParameter="{Binding ElementName=MaximizeButton}"
