--- a/src/Osu.Music.UI/Views/SongsView.xaml
+++ b/src/Osu.Music.UI/Views/SongsView.xaml
@@ -24,7 +24,7 @@
                     <TextBlock FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" 
                                FontSize="16" FontWeight="DemiBold" Margin="7 10 0 10" DockPanel.Dock="Left"
                                Text="Songs"/>
-                    <TextBox FontFamily="{DynamicResource Roboto}" FontSize="16" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="200"/>
+                    <TextBox Style="{DynamicResource SearchText}" Grid.Column="1" MinWidth="200"/>
                     <Button Style="{DynamicResource PlaylistAction}" Foreground="{DynamicResource SolidColorBrushMain}" Content="&#xe8b6;" FontSize="18"
                             HorizontalAlignment="Right" Margin="0 0 10 0" Grid.Column="2"/>
                 </Grid>
