--- a/src/Osu.Music.UI/Views/SearchView.xaml
+++ b/src/Osu.Music.UI/Views/SearchView.xaml
@@ -26,8 +26,7 @@
                     <TextBox x:Name="SearchField" Style="{DynamicResource SearchText}" Text="{Binding Request}" Grid.Column="1" MinWidth="200"/>
                     <Button Style="{DynamicResource PlaylistAction}" Foreground="{DynamicResource SolidColorBrushMain}" Content="&#xe8b6;" FontSize="18"
                             HorizontalAlignment="Right" Margin="0 0 10 0" Grid.Column="2"
-                            Command="{Binding DataContext.SearchCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}"
-                            CommandParameter="{Binding ElementName=SearchField, Path=Text}"/>
+                            Command="{Binding SearchCommand}"/>
                 </Grid>
                 <ListView x:Name="SongsList" Style="{DynamicResource ListViewBeatmaps}" Grid.Row="1" 
                   ItemsSource="{Binding Result}" 
