Search on pressing Enter

--- a/src/Osu.Music.UI/Views/SongsView.xaml
+++ b/src/Osu.Music.UI/Views/SongsView.xaml
@@ -24,7 +24,13 @@
                     <TextBlock FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" 
                                FontSize="16" FontWeight="DemiBold" Margin="7 10 0 10" DockPanel.Dock="Left"
                                Text="Songs"/>
-                    <TextBox x:Name="SearchField" Style="{DynamicResource SearchText}" Grid.Column="1" MinWidth="200"/>
+                    <TextBox x:Name="SearchField" Style="{DynamicResource SearchText}" Grid.Column="1" MinWidth="200">
+                        <TextBox.InputBindings>
+                            <KeyBinding Command="{Binding DataContext.SearchCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}" 
+                                        CommandParameter="{Binding ElementName=SearchField, Path=Text}"
+                                        Key="Return"/>
+                        </TextBox.InputBindings>
+                    </TextBox>
                     <Button Style="{DynamicResource PlaylistAction}" Foreground="{DynamicResource SolidColorBrushMain}" Content="&#xe8b6;" FontSize="18"
                             HorizontalAlignment="Right" Margin="0 0 10 0" Grid.Column="2"
                             Command="{Binding DataContext.SearchCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}"
