--- a/src/Osu.Music.UI/Views/SearchView.xaml
+++ b/src/Osu.Music.UI/Views/SearchView.xaml
@@ -23,7 +23,11 @@
                     <TextBlock FontFamily="{DynamicResource Roboto}" Foreground="{DynamicResource SolidColorBrushMain}" 
                                FontSize="16" FontWeight="DemiBold" Margin="7 10 0 10" DockPanel.Dock="Left"
                                Text="Search"/>
-                    <TextBox x:Name="SearchField" Style="{DynamicResource SearchText}" Text="{Binding Request}" Grid.Column="1" MinWidth="200"/>
+                    <TextBox x:Name="SearchField" Style="{DynamicResource SearchText}" Text="{Binding Request, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" MinWidth="200">
+                        <TextBox.InputBindings>
+                            <KeyBinding Command="{Binding SearchCommand}" Key="Return"/>
+                        </TextBox.InputBindings>
+                    </TextBox>
                     <Button Style="{DynamicResource PlaylistAction}" Foreground="{DynamicResource SolidColorBrushMain}" Content="&#xe8b6;" FontSize="18"
                             HorizontalAlignment="Right" Margin="0 0 10 0" Grid.Column="2"
                             Command="{Binding SearchCommand}"/>
