--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -120,7 +120,7 @@
                 <Grid>
                     <Grid>
                         <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15"  Margin="0 15 0 0"
-                               Fill="Pink"/>
+                               Fill="{DynamicResource SolidColorBrushMain}"/>
                         <materialDesign:PackIcon HorizontalAlignment="Center" VerticalAlignment="Center" Width="80" Height="80" Margin="0 10 0 0"
                                              Foreground="White"
                                              Kind="Music">
@@ -154,7 +154,7 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Button Style="{DynamicResource PlaylistAction}" Content="&#xe037;" FontSize="70" Margin="5 0 5 0" Height="40" Width="40"
                                     HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                    Command="{Binding DataContext.SelectPlaylistAndPlayCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
+                                    Command="{Binding DataContext.SelectCollectionAndPlayCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
                                     CommandParameter="{Binding Path=.}"/>
                         </StackPanel>
                     </Border>
@@ -181,7 +181,7 @@
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseLeftButtonUp">
                             <prism:InvokeCommandAction 
-                                Command="{Binding DataContext.SelectPlaylistCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
+                                Command="{Binding DataContext.SelectCollectionCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
                                 CommandParameter="{Binding Path=.}"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
