Shuffle moved to AudioPlayback

--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -118,7 +118,7 @@
                 <ToggleButton Style="{DynamicResource PlayerToggleButtonVolume}" Command="{Binding MuteCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=Self}, Path=IsChecked}"
                               IsChecked="{Binding Playback.Mute}"/>
                 <Slider Style="{DynamicResource VolumeSlider}" Minimum="0" Maximum="1" Value="{Binding Playback.Volume}" IsMoveToPointEnabled="True" Margin="0 0 5 0"/>
-                <ToggleButton Style="{DynamicResource PlayerToggleButtonShuffle}" IsChecked="{Binding Random}"/>
+                <ToggleButton Style="{DynamicResource PlayerToggleButtonShuffle}" IsChecked="{Binding Playback.Shuffle}"/>
                 <ToggleButton Style="{DynamicResource PlayerToggleButtonRepeat}" IsChecked="{Binding Playback.Repeat}"/>
             </StackPanel>
         </Grid>
