Switched to DI containers

--- a/src/Osu.Music/Views/MainWindow.xaml
+++ b/src/Osu.Music/Views/MainWindow.xaml
@@ -12,7 +12,7 @@
     </WindowChrome.WindowChrome>
     <Grid>
         <md:DialogHost DialogTheme="Inherit">
-            <ContentControl prism:RegionManager.RegionName="ContentRegion"/>
+            <ContentControl prism:RegionManager.RegionName="GlobalRegion"/>
         </md:DialogHost>
     </Grid>
 </Window>
